<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layJoinMain"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/textBackgroundColor">


            <Button
                android:id="@+id/btnBackToLogin"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:icon="@drawable/ic_baseline_arrow_back_24"
                app:iconTint="@color/white"
                app:rippleColor="@color/primaryColor_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/jointitle"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </FrameLayout>


        <LinearLayout
            android:id="@+id/layJoinView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingTop="20dp"

            android:paddingEnd="5dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/EditTextMyStyleOutline"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.1"
                    android:hint="@string/textIdHint"
                    app:helperText="">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textMailInJoin"
                        style="@style/EditTextMyStyleOutline"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:imeOptions="actionDone"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/DropdownMyStyleOutline"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:hint="@string/textCompanyHint">

                    <AutoCompleteTextView
                        android:id="@+id/dropdownDomain"
                        style="@style/DropdownMyStyleOutline"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="3dp"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextMyStyleOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/textPwHintToJoin"
                app:endIconMode="password_toggle"
                app:helperText="">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textPasswordInJoin"
                    style="@style/EditTextMyStyleOutline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textField3"
                    style="@style/EditTextMyStyleOutline"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.1"
                    android:hint="@string/textNameHint"
                    app:helperText="">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textNameInJoin"
                        style="@style/EditTextMyStyleOutline"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:imeOptions="actionDone"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/DropdownMyStyleOutline"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:hint="@string/textPositionHint">

                    <AutoCompleteTextView
                        android:id="@+id/dropdownPosition"
                        style="@style/DropdownMyStyleOutline"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="3dp"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField2"
                style="@style/EditTextMyStyleOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/textBranchHint"
                app:helperText="">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textBranchInJoin"
                    style="@style/EditTextMyStyleOutline"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNone"
                    android:inputType="none"
                    android:focusableInTouchMode="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnJoinUs"
                style="@style/ButtonMyStyle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:text="@string/btnJoinUsText" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo" />


        </LinearLayout>
</LinearLayout>